[package]
name = "actix-agent-sse"
version = "0.1.0"
edition = "2021"
description = "SSE streaming middleware for actix-web AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/noahbclarkson/actix-agent-sse"
keywords = ["actix", "sse", "streaming", "ai", "agent"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
actix-web = "4"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
